[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
simdjson-rust = "0.3.0-alpha.2"
simd-json = "0.13.10"
criterion = { version = "0.5", features = ["html_reports"] }
